--- a/src/components/NavigationBar/BottomNavigationBar.module.css
+++ b/src/components/NavigationBar/BottomNavigationBar.module.css
@@ -4,6 +4,7 @@
     position: relative;
     /* bottom: 0; */
     width: 100%;
+    display: flex;
   }
 
   
@@ -36,6 +37,7 @@
     .navbar {
         bottom: 0 !important;
         position: fixed;
+        display: inline;
     }
 
     .navbar.responsive {
